Fix time entry form scroll on firefox

--- a/src/features/timeEntry/components/layout/index.scss
+++ b/src/features/timeEntry/components/layout/index.scss
@@ -49,7 +49,7 @@
       display: flex;
       justify-content: center;
       width: 100%;
-      height: 100%;
+      height: inherit;
     }
   }
 }
